# sailing-simulator

./: CMakeLists.txt  README.md
assets/data/actors/: buoy.xml  flag.xml  flagpole.xml  headSail.xml  mainSail.xml  mainboom.xml  sailingBoat.xml  skybox.xml  water.xml
assets/data/scenes/: demo.xml
assets/data/settings/: game.xml
assets/data/sounds/: background.xml  santiano.xml  wind.xml
assets/material/: Boathull.xml  aluminium.xml  buoy.xml  buoy_1.xml  buoy_2.xml  buoy_3.xml  buoy_4.xml  buoy_5.xml  buoy_6.xml  chrome.xml  defaultMaterial.xml  flag.xml  glass.xml  life_thingy.xml  metal.xml  plexiglass.xml  rope.xml  rubber_boat.xml  sail.xml  synth_rubber.xml  wire.xml  wood.xml
assets/shader/: fsh_blur.glsl  fsh_default.glsl  fsh_line.glsl  fsh_particle.glsl  fsh_shadow.glsl  fsh_skybox.glsl  fsh_water.glsl  tcs_water.glsl  tes_water.glsl  vsh_default.glsl  vsh_fullscreen.glsl  vsh_line.glsl  vsh_particle.glsl  vsh_skybox.glsl  vsh_water.glsl
lib/include/fastdelegate/: FastDelegate.h
lib/linux/fmod/: libfmod.so.7  libfmod.so.7.6
lib/linux/glew/: libGLEW.so.1.13.0
lib/linux/glfw/: libglfw.so.3.2
lib/macos/fmod/: libfmod.dylib  libfmodL.dylib
lib/win64/bullet/: BulletInverseDynamics.lib  BulletSoftBody.lib  LinearMath.lib
lib/win64/bullet/Release/: BulletCollision.lib  BulletDynamics.lib  BulletInverseDynamics.lib  BulletSoftBody.lib  LinearMath.lib
lib/win64/fmod/: fmod64_vc.lib
source/: CMakeLists.txt
source/application_layer/: CMakeLists.txt
source/application_layer/core/: CMakeLists.txt  GameCore.cpp  GameCore.h  PhysicSimulationThread.cpp  PhysicSimulationThread.h  PlayerInputThread.cpp  PlayerInputThread.h  SoundThread.cpp  SoundThread.h  Thread.h  WorldSimulationThread.cpp  WorldSimulationThread.h  stdafx.h
source/application_layer/error_handling/: CMakeLists.txt  EngineException.h  KeyNotFoundException.cpp  KeyNotFoundException.h
source/application_layer/resources/: CMakeLists.txt  CompiledMeshResource.cpp  CompiledMeshResource.h  FileManager.cpp  FileManager.h  IResource.h  ImageResource.cpp  ImageResource.h  ObjResource.cpp  ObjResource.h  ResourceManager.cpp  ResourceManager.h  SoundResource.cpp  SoundResource.h  XMLElement.cpp  XMLElement.h  XMLResource.cpp  XMLResource.h
source/application_layer/sailing-simulator/: main.cpp
source/application_layer/utils/: CMakeLists.txt  Logger.cpp  Logger.h  Timer.h
source/game_logic/: CMakeLists.txt
source/game_logic/actor_components/: ActorComponent.h  CMakeLists.txt  ClothComponent.cpp  ClothComponent.h  FloatingObjectComponent.cpp  FloatingObjectComponent.h  IPhysicsComponent.h  OceanComponent.cpp  OceanComponent.h  ParticleSystemComponent.cpp  ParticleSystemComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PlayerComponent.cpp  PlayerComponent.h  RenderComponent.cpp  RenderComponent.h  SailComponent.cpp  SailComponent.h
source/game_logic/actor_system/: Actor.cpp  Actor.h  ActorFactory.cpp  ActorFactory.h  CMakeLists.txt
source/game_logic/data_structures/: CMakeLists.txt  ICopyable.h  Settings.cpp  Settings.h
source/game_logic/event_system/: BaseEventData.cpp  BaseEventData.h  CMakeLists.txt  EventManager.cpp  EventManager.h  EvtData_ActorHasMoved.cpp  EvtData_ActorHasMoved.h  EvtData_ChangeAudio.cpp  EvtData_ChangeAudio.h  EvtData_KeyPressed.cpp  EvtData_KeyPressed.h  EvtData_MouseClicked.cpp  EvtData_MouseClicked.h  EvtData_MouseMoved.cpp  EvtData_MouseMoved.h  EvtData_Scrolled.cpp  EvtData_Scrolled.h  EvtData_TransformActor.cpp  EvtData_TransformActor.h  IEventData.h  IEventManager.h
source/game_logic/game_app/: CMakeLists.txt  GameApp.cpp  GameApp.h
source/game_logic/physics/: BulletPhysics.cpp  BulletPhysics.h  CMakeLists.txt  ClothParticle.cpp  ClothParticle.h  ClothTriangle.cpp  ClothTriangle.h  Force.cpp  Force.h  OceanSimulator.cpp  OceanSimulator.h  Spring.cpp  Spring.h
source/game_logic/process_system/: CMakeLists.txt  Process.cpp  Process.h  ProcessManager.cpp  ProcessManager.h
source/game_view/: CMakeLists.txt
source/game_view/audio/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  Sound.cpp  Sound.h
source/game_view/rendering/: AssignStep.cpp  AssignStep.h  BulletDebugDrawStep.cpp  BulletDebugDrawStep.h  CMakeLists.txt  Geometry.cpp  Geometry.h  IRenderingStep.h  Material.cpp  Material.h  PostRenderingStep.cpp  PostRenderingStep.h  RenderToScreenStep.cpp  RenderToScreenStep.h  RenderingStep.cpp  RenderingStep.h  ShadowStep.cpp  ShadowStep.h  Texture.cpp  Texture.h  VertexData.h
source/game_view/scene/: CMakeLists.txt  Scene.cpp  Scene.h
source/game_view/scene_graph/: CMakeLists.txt  CameraNode.cpp  CameraNode.h  ISceneNode.h  LightNode.cpp  LightNode.h  SceneGraph.cpp  SceneGraph.h  SceneGroup.cpp  SceneGroup.h  SceneNode.cpp  SceneNode.h  SkyNode.cpp  SkyNode.h
source/game_view/ui/: ANDController.cpp  ANDController.h  CMakeLists.txt  IController.h  Interactive.cpp  Interactive.h  KeyMapping.cpp  KeyMapping.h  KeyboardSensor.cpp  KeyboardSensor.h  MouseSensor.cpp  MouseSensor.h  ORController.cpp  ORController.h  Sensor.h
source/game_view/video_system/: CMakeLists.txt  GLProgram.cpp  GLProgram.h  GLSLShader.cpp  GLSLShader.h  IShader.h  IVideoSystem.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLVideoSystem.cpp  OpenGLVideoSystem.h
specs/build_files/cmake/: macros.cmake
